Thu May 21 21:11:44 2009  Arnold D. Robbins  <arnold@skeeve.com>
 
 	Add simple constant folding.
 
	* awk.h (do_optimize): New declaration.
	(calc_exp): Add declaration.
	* eval.c (calc_exp): Make non-static.
	* main.c (do_optimize): New variable.
	(opttab): Add new entry for --optimize.
	(main): Add 'O' to optlist and code for argument parsing.
	(usage): Update for new option.
	* awkgram.y (Node_concat, Node_exp, Node_times, Node_quotient, Node_mod,
	Node_plus, Node_minus): Call `constant_fold' to create the node in
 	the tree.
	(constant_fold): New function.

Fri May 15 16:02:01 2009  Arnold D. Robbins  <arnold@skeeve.com>

	* awk.h (getnode): For MPROF: Fix a typo.

Fri May 15 14:10:44 2009  Arnold D. Robbins  <arnold@skeeve.com>

	Function arguments cannot be reserved variable names, per POSIX.

	* main.c (struct varinit): Add flags member.
	(varinit): Add values for flags member (one or both of NON_STANDARD
	or NO_INSTALL). Add entries for the rest of the gawk variables and
	sort them, so that the table can be searched by ...
	(is_std_var): New routine to see if a name is a standard variable.
	* awk.h (is_std_var): Add declaration.
	* awkgram.y (func_install): Use new routine and issue error.

Wed Apr 22 07:42:05 2009  Arnold D. Robbins  <arnold@skeeve.com>

	* builtin.c (sub_common): In code for handling \<dig> replacements,
	first make sure that <dig> is within the range of parentheses sets
	given, and then make sure that the subpattern start is not -1, meaning
	that something actually matched. Thanks to  Martin Olsson
	<mnemo@minimum.se> for the bug report.
	(do_length): Add a lint warning if `length' is passed an untyped
	argument.

Thu Apr 16 22:59:32 2009  Arnold D. Robbins  <arnold@skeeve.com>

	* eval.c (func_call): Save nloops_active; if after function returns
	the actual nloops_active is greater than the saved value, it means
	there was a return inside the loop body, so pop off the necessary